--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "todo-app-compilers-comparison",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.tsx",
+  "private": true,
   "scripts": {
+    "start": "webpack serve",
     "build": "webpack",
     "build:prod": "cross-env NODE_ENV=production npm run build"
   },
@@ -19,20 +21,28 @@
   },
   "homepage": "https://github.com/Gelio/todo-app-compilers-comparison#readme",
   "devDependencies": {
+    "@types/mini-css-extract-plugin": "^1.2.2",
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/webpack-dev-server": "^3.11.1",
+    "autoprefixer": "^10.2.1",
     "cross-env": "^7.0.3",
+    "css-loader": "^5.0.1",
+    "html-webpack-plugin": "^5.0.0-beta.4",
+    "mini-css-extract-plugin": "^1.3.3",
+    "postcss": "^8.2.4",
+    "postcss-loader": "^4.1.0",
     "ts-loader": "^8.0.14",
     "ts-node": "^9.1.1",
     "webpack": "^5.11.1",
-    "webpack-cli": "^4.3.1"
+    "webpack-cli": "^4.3.1",
+    "webpack-dev-server": "^3.11.1"
   },
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "typescript": "^4.1.3",
-    "webpack-dev-server": "^3.11.1"
+    "tailwindcss": "^2.0.2",
+    "typescript": "^4.1.3"
   }
 }
