--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Gelio/todo-app-compilers-comparison#readme",
   "devDependencies": {
+    "@types/css-minimizer-webpack-plugin": "^1.1.1",
     "@types/mini-css-extract-plugin": "^1.2.2",
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
@@ -29,6 +30,7 @@
     "autoprefixer": "^10.2.1",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
+    "css-minimizer-webpack-plugin": "^1.2.0",
     "html-webpack-plugin": "^5.0.0-beta.4",
     "mini-css-extract-plugin": "^1.3.3",
     "postcss": "^8.2.4",
