--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Gelio/todo-app-compilers-comparison#readme",
   "devDependencies": {
+    "@types/copy-webpack-plugin": "^6.4.0",
     "@types/css-minimizer-webpack-plugin": "^1.1.1",
     "@types/mini-css-extract-plugin": "^1.2.2",
     "@types/node": "^14.14.20",
@@ -28,6 +29,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/webpack-dev-server": "^3.11.1",
     "autoprefixer": "^10.2.1",
+    "copy-webpack-plugin": "^7.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.2.0",
@@ -42,8 +44,10 @@
     "webpack-dev-server": "^3.11.1"
   },
   "dependencies": {
+    "immer": "^8.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "recoil": "^0.1.2",
     "tailwindcss": "^2.0.2",
     "typescript": "^4.1.3"
   }
