--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "start": "webpack serve",
     "build": "webpack",
-    "build:prod": "cross-env NODE_ENV=production npm run build"
+    "build:prod": "cross-env NODE_ENV=production npm run build",
+    "predeploy": "npm run build:prod",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -33,6 +35,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.2.0",
+    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^5.0.0-beta.4",
     "mini-css-extract-plugin": "^1.3.3",
     "postcss": "^8.2.4",
