--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
   },
   "homepage": "https://github.com/Gelio/todo-app-compilers-comparison#readme",
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@types/copy-webpack-plugin": "^6.4.0",
     "@types/css-minimizer-webpack-plugin": "^1.1.1",
     "@types/mini-css-extract-plugin": "^1.2.2",
@@ -31,6 +35,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/webpack-dev-server": "^3.11.1",
     "autoprefixer": "^10.2.1",
+    "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^7.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
@@ -40,6 +45,7 @@
     "mini-css-extract-plugin": "^1.3.3",
     "postcss": "^8.2.4",
     "postcss-loader": "^4.1.0",
+    "react-refresh": "^0.9.0",
     "ts-loader": "^8.0.14",
     "ts-node": "^9.1.1",
     "webpack": "^5.11.1",
