--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@swc/core": "^1.2.45",
     "@types/copy-webpack-plugin": "^6.4.0",
     "@types/css-minimizer-webpack-plugin": "^1.1.1",
     "@types/mini-css-extract-plugin": "^1.2.2",
@@ -46,6 +47,7 @@
     "postcss": "^8.2.4",
     "postcss-loader": "^4.1.0",
     "react-refresh": "^0.9.0",
+    "swc-loader": "^0.1.12",
     "ts-loader": "^8.0.14",
     "ts-node": "^9.1.1",
     "webpack": "^5.11.1",
