--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.2.0",
+    "esbuild-loader": "^2.7.0",
     "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^5.0.0-beta.4",
     "mini-css-extract-plugin": "^1.3.3",
