--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "private": true,
   "scripts": {
     "start": "webpack serve",
-    "build": "webpack",
-    "build:prod": "cross-env NODE_ENV=production npm run build",
+    "build": "npm run build:prod",
+    "build:dev": "cross-env NODE_ENV=development webpack",
+    "build:prod": "cross-env NODE_ENV=production webpack",
     "predeploy": "npm run build:prod",
     "deploy": "gh-pages -d dist"
   },
