mark unused locals/params as errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,9 @@
     "moduleResolution": "node",
 
     "sourceMap": true,
-    "esModuleInterop": true
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true
   }
 }
