--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:dev": "cross-env NODE_ENV=development webpack",
     "build:prod": "cross-env NODE_ENV=production webpack",
     "predeploy": "npm run build:prod",
+    "check-types": "tsc -p . --noEmit",
     "deploy": "gh-pages -d dist"
   },
   "repository": {
@@ -43,6 +44,7 @@
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.2.0",
     "esbuild-loader": "^2.7.0",
+    "fork-ts-checker-webpack-plugin": "^6.1.0",
     "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^5.0.0-beta.4",
     "mini-css-extract-plugin": "^1.3.3",
