--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "predeploy": "npm run build:prod",
     "check-types": "tsc -p . --noEmit",
     "deploy": "gh-pages -d dist",
-    "benchmark": "node benchmark.js"
+    "benchmark": "node benchmark.js",
+    "esbuild:prod": "npm run esbuild:only:prod && npm run postcss:only:prod",
+    "esbuild:only:prod": "esbuild src/index.tsx --bundle --define:TS_COMPILER=\"'esbuild'\" --minify --sourcemap --outfile=dist/index.js --define:process.env.NODE_ENV=\"'production'\"",
+    "postcss:only:prod": "cross-env ENV_BUILD=prod NODE_ENV=production postcss src/index.css -o dist/index.css"
   },
   "repository": {
     "type": "git",
@@ -32,7 +35,6 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@swc/core": "^1.2.45",
     "@types/copy-webpack-plugin": "^6.4.0",
-    "@types/css-minimizer-webpack-plugin": "^1.1.1",
     "@types/mini-css-extract-plugin": "^1.2.2",
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
@@ -43,13 +45,14 @@
     "copy-webpack-plugin": "^7.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
-    "css-minimizer-webpack-plugin": "^1.2.0",
+    "cssnano": "^4.1.10",
     "esbuild-loader": "^2.7.0",
     "fork-ts-checker-webpack-plugin": "^6.1.0",
     "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^5.0.0-beta.4",
     "mini-css-extract-plugin": "^1.3.3",
     "postcss": "^8.2.4",
+    "postcss-cli": "^8.3.1",
     "postcss-loader": "^4.1.0",
     "react-refresh": "^0.9.0",
     "swc-loader": "^0.1.12",
