--- a/package.json
+++ b/package.json
@@ -5,17 +5,10 @@
   "main": "src/index.tsx",
   "private": true,
   "scripts": {
-    "start": "webpack serve",
-    "build": "npm run build:prod",
-    "build:dev": "cross-env NODE_ENV=development webpack",
-    "build:prod": "cross-env NODE_ENV=production webpack",
-    "predeploy": "npm run build:prod",
     "check-types": "tsc -p . --noEmit",
     "deploy": "gh-pages -d dist",
-    "benchmark": "node benchmark.js",
-    "esbuild:prod": "npm run esbuild:only:prod && npm run postcss:only:prod",
-    "esbuild:only:prod": "esbuild src/index.tsx --bundle --define:TS_COMPILER=\"'esbuild'\" --minify --sourcemap --outfile=dist/index.js --define:process.env.NODE_ENV=\"'production'\"",
-    "postcss:only:prod": "cross-env ENV_BUILD=prod NODE_ENV=production postcss src/index.css -o dist/index.css"
+    "snowpack:dev": "snowpack dev",
+    "snowpack:build": "snowpack build"
   },
   "repository": {
     "type": "git",
@@ -29,38 +22,18 @@
   },
   "homepage": "https://github.com/Gelio/todo-app-compilers-comparison#readme",
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-react": "^7.12.10",
-    "@babel/preset-typescript": "^7.12.7",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
-    "@swc/core": "^1.2.45",
-    "@types/copy-webpack-plugin": "^6.4.0",
-    "@types/mini-css-extract-plugin": "^1.2.2",
-    "@types/node": "^14.14.20",
+    "@snowpack/plugin-postcss": "^1.1.0",
+    "@snowpack/plugin-react-refresh": "^2.4.0",
+    "@snowpack/plugin-webpack": "^2.3.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/webpack-dev-server": "^3.11.1",
     "autoprefixer": "^10.2.1",
-    "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^7.0.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.0.1",
     "cssnano": "^4.1.10",
-    "esbuild-loader": "^2.7.0",
-    "fork-ts-checker-webpack-plugin": "^6.1.0",
     "gh-pages": "^3.1.0",
-    "html-webpack-plugin": "^5.0.0-beta.4",
-    "mini-css-extract-plugin": "^1.3.3",
     "postcss": "^8.2.4",
     "postcss-cli": "^8.3.1",
-    "postcss-loader": "^4.1.0",
-    "react-refresh": "^0.9.0",
-    "swc-loader": "^0.1.12",
-    "ts-loader": "^8.0.14",
-    "ts-node": "^9.1.1",
-    "webpack": "^5.11.1",
-    "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^3.11.1"
+    "snowpack": "^3.0.11"
   },
   "dependencies": {
     "immer": "^8.0.0",
