--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "strict": true,
-    "module": "commonjs",
+    "module": "ES2020",
     "target": "ES5",
     "moduleResolution": "node",
 
